Stop header from being pushed off screen on mobile
Header was being pushed off the screen and became
inaccessible on mobile devices when too many books
were added into the list. Main section of page has
had overflow: scroll set to prevent this happening

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ input { padding: 3px; border-radius: 10px;}
     }
 
     table {
-        margin: 0;
+        margin: 0px 0px 30px 0px;
         font-size: 14px;
         max-width: 350px;
     }
@@ -236,10 +236,11 @@ input { padding: 3px; border-radius: 10px;}
     main {
         display: flex;
         flex-direction: column;
-        gap: 10%;
+        gap: 5%;
         padding: 5px;
         width: 100vw;
         height: 100%;
+        overflow: scroll;
     }
 
     .credit {
